core rebuild after update